# wallpaperengine-gui

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_uninstall.cmake.in
desktop/: wallpaperengine-gui-autostart.desktop.in  wallpaperengine-gui.desktop.in
resources/: icons.qrc
src/: ConfigManager.cpp  ConfigManager.h  MainWindow.cpp  MainWindow.h  PlaylistPreview.cpp  PlaylistPreview.h  PropertiesPanel.cpp  PropertiesPanel.h  SettingsDialog.cpp  SettingsDialog.h  SteamApiManager.cpp  SteamApiManager.h  SteamDetector.h  WallpaperManager.cpp  WallpaperManager.h  WallpaperPlaylist.cpp  WallpaperPlaylist.h  WallpaperPreview.cpp  WallpaperPreview.h  main.cpp
src/addons/: WNELAddon.cpp  WNELAddon.h
src/core/: ConfigManager.cpp  ConfigManager.h  SingleApplication.cpp  SingleApplication.h  WallpaperManager.cpp  WallpaperManager.h
src/playlist/: WallpaperPlaylist.cpp  WallpaperPlaylist.h
src/steam/: SteamApiManager.cpp  SteamDetector.cpp
src/ui/: MainWindow.cpp  MainWindow.h  PropertiesPanel.cpp  PropertiesPanel.h  SettingsDialog.cpp  SettingsDialog.h
src/widgets/: PlaylistPreview.cpp  PlaylistPreview.h  ScreenSelectionWidget.cpp  ScreenSelectionWidget.h  WallpaperPreview.cpp  WallpaperPreview.h
